--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,15 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="movieId" translatable="false">movieId</string>
+    <string name="add_movie">Add new movie</string>
+    <string name="enter_movie_name">Enter movie title</string>
+    <string name="save">Save Movie</string>
+    <string name="select_year">Select release year</string>
+    <string name="select_actors">Select actors</string>
+    <string name="select_genre">Select Genre</string>
+    <string name="delete_movie">Delete This Movie</string>
+    <string name="delete_dialog">Are you sure you want to delete %1$s?</string>
+    <string name="director">Director(s)</string>
+    <string name="actor">Actors</string>
+    <string name="movie_title_with_year">%1$s (%2$d)</string>
 </resources>
